--- a/mainfile.html
+++ b/mainfile.html
@@ -18,7 +18,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercantilism Services LLP</title>
-
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,409 +30,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="cssfile.css"> -->
   <!-- body and navbar  -->
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-
-    }
-
-    body {
-      font-family: 'Quicksand', sans-serif;
-    }
-
-    .fontbold {
-      font-weight: bolder !important;
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
-
-    .color-theme {
-      color: rgb(196, 133, 118);
-    }
-
-
-
-    .navbar {
-      display: flex;
-      align-items: center;
-      color: rgb(181, 177, 177);
-      background-color: rgb(63, 63, 63);
-      position: relative;
-      /* height: 22%; */
-    }
-
-    /* navbar logo */
-
-    .logo {
-      font-family: 'Great Vibes', cursive;
-      font-size: 2.2rem;
-      margin: 0.4em 0.8em;
-      padding-right: 2em;
-    }
-
-    .navbar ul {
-      display: flex;
-      padding-left: 1em;
-    }
-
-    .navbar ul li {
-      list-style: none;
-      font-size: 0.9rem;
-      margin: 2px 5px;
-    }
-
-    .navbar ul li a {
-
-      color: rgb(181, 177, 177);
-      text-decoration: none;
-      display: block;
-      border-radius: 5px;
-      margin: 0em 2em;
-
-
-    }
-
-    .navbar::before {
-      content: "";
-      background-color: rgb(63, 63, 63);
-      position: absolute;
-      height: 12%;
-      z-index: -1;
-      opacity: 1;
-    }
-
-    .navbar ul li a:hover {
-      color: burlywood;
-
-    }
-
-    .svg ul li:hover {
-      color: burlywood;
-
-    }
-
-    .svg {
-      position: absolute;
-      top: 1em;
-      right: 0.8em;
-    }
-  </style>
-  <!-- section1 -->
-  <style>
-    /* section 1 css start here */
-    /* .section1::before{
-  content: "";
-  background: url(/img1.jpg) no-repeat center center/cover;
-  position: absolute;
-  width: 100%;
-  height: 75%;
-  z-index: -1;
-  opacity: 1;
-} */
-    .section1 {
-      /* background: url(/img1.jpg) no-repeat center center/cover; */
-      display: inline-block;
-      width: 100%;
-      height: 100%;
-    }
-
-    .section1 img {
-      width: 100vw;
-    }
-
-    /* section 2 here: */
-    /* .section2::before{
-    content:'';
-    position: absolute;
-    width: 100%;
-    height: 55vh;
-    z-index: -1;
-    opacity: 1;
-  } */
-  </style>
-  <!-- section2 -->
-  <style>
-    .section2 {
-      background-color: rgb(196, 133, 118);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-
-    }
-
-    .h-primary {
-      padding-top: 0.5rem;
-      margin: 5px;
-      display: inline-block;
-      font-size: 4rem;
-      font-family: 'Great Vibes', cursive;
-    }
-
-    .h-secondary {
-
-      padding: 1rem;
-      display: inline-block;
-      font-size: 1rem;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    .btn {
-      display: inline-block;
-      border-radius: 2rem;
-      font-size: 1rem;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      padding: 1.2rem 2.5rem;
-      margin-top: 0.2rem;
-      margin-bottom: 4rem;
-      background-color: rgb(196, 133, 118);
-      border: 2px solid white;
-      color: white;
-
-    }
-
-    .btn:hover {
-      background-color: white;
-      color: black;
-      cursor: pointer;
-    }
-  </style>
-  <!-- section3 -->
-  <style>
-    .section3 {
-      display: flex;
-    }
-
-    .section3 .box1 img {
-      width: 50vw;
-      height: 68vh;
-    }
-
-    .section3 .box2 {
-      /* border:1px solid firebrick; */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-items: center;
-      justify-content: center;
-    }
-
-    .section3 .box2 .h-primary {
-      padding-top: 0;
-      padding-bottom: 2rem;
-
-
-    }
-
-    .section3 p {
-      font-size: 1.5rem;
-      margin: 0.5em 3em;
-
-    }
-  </style>
-  <!-- section4  -->
-  <style>
-    .section4 {
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-    }
-
-    .section4 .box1 {
-      color: rgb(95, 95, 95);
-      font-size: 2rem;
-      padding: 2rem;
-    }
-
-    .section4 .box2 {
-      font-size: 1rem;
-      padding: 1rem;
-    }
-
-    .section4 .box3 {
-      font-size: 1rem;
-      padding: 1rem 10rem;
-      color: rgb(61, 61, 61);
-      text-align: center;
-    }
-  </style>
-  <!-- section5  -->
-  <style>
-    .section5 {
-      display: flex;
-      align-items: center;
-    }
-
-    .subheading {
-      font-size: 1rem;
-      padding: 1rem 2rem;
-      margin-top: 1rem;
-    }
-
-    .subpara {
-      font-size: 1rem;
-      padding: 1rem 2rem;
-      margin: 0.2rem 2rem;
-      color: rgb(61, 61, 61);
-    }
-  </style>
-  <!-- section6 -->
-  <style>
-    .section6 .p1 {
-      font-family: 'Exo';
-      padding-top: 2rem;
-      margin: 1rem;
-      color: rgb(61, 61, 61);
-      font-size: 1.8rem;
-    }
-
-    .section6 .p2 {
-      padding: 1rem;
-      font-size: 1rem;
-    }
-  </style>
-  <!-- section7 -->
-  <style>
-    .section7 {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding-top: 1rem;
-      font-size: 1.5rem;
-      font-family: "Exo";
-      color: rgb(63, 63, 63);
-    }
-
-    .section7 p {
-      padding-top: 4.5rem;
-      padding-bottom: 2rem;
-    }
-
-    .section7 div a {
-      text-decoration: none;
-    }
-
-    .basemargin {
-
-      margin: 2rem 1rem;
-
-
-    }
-  </style>
-
-
-
-  <!-- faq section -->
-  <style>
-    .faq-heading {
-      border-bottom: .777;
-      padding: 20px 60px;
-    }
-
-    .faq-container {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-
-    }
-
-    .hr-line {
-      width: 60%;
-      margin: auto;
-    }
-
-    /* Style the buttons that are used to open and close the faq-page body */
-    .faq-page {
-
-      color: rgb(63, 63, 63);
-      cursor: pointer;
-      padding: 1.5rem 1rem;
-      width: 60%;
-      border: none;
-      outline: none;
-      transition: 0.4s;
-      margin: auto;
-      font-weight: 100;
-
-    }
-
-    .faq-body {
-      margin: 1rem auto;
-      /* text-align: center; */
-      width: 60%;
-      padding: auto;
-
-
-    }
-
-    /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-    .active,
-    .faq-page:hover {
-      background-color: #FFFFFF;
-    }
-
-    /* Style the faq-page panel. Note: hidden by default */
-    .faq-body {
-      padding: 0 18px;
-      background-color: white;
-      display: none;
-      overflow: hidden;
-    }
-
-    .faq-page:after {
-      content: '\02795';
-      /* Unicode character for "plus" sign (+) */
-      font-size: 13px;
-      color: .777;
-      float: right;
-      margin-left: 5px;
-    }
-
-    .active:after {
-      content: "\2796";
-      /* Unicode character for "minus" sign (-) */
-    }
-  </style>
-
-  <!-- footer -->
-  <style>
-    footer {
-      padding-top: 2rem;
-      margin-top: 8rem;
-      display: flex;
-      align-items: flex-start;
-      background-color: rgb(61, 61, 61);
-      color: rgb(181, 177, 177);
-    }
-
-    footer .box1 {
-      font-size: 0.8rem;
-      padding: 2rem 0rem;
-      margin: 2rem;
-    }
-
-    footer .box2 {
-      position: relative;
-      left: 40rem;
-      top: 3rem;
-      /* border: 2px solid red; */
-    }
-
-    footer .box2 a {
-      text-decoration: none;
-    }
-  </style>
+ 
 </head>
 
 <body>
